--- a/vagrant/build.gradle
+++ b/vagrant/build.gradle
@@ -1,2 +1,17 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+
+	 compile group: 'org.elasticsearch.client', name: 'transport', version: '5.1.1'
+	 compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
+     compile group: 'joda-time', name: 'joda-time', version: '2.3'
+     
+     
+     
+}
