--- a/vertica-elasticsearch-udx/build.gradle
+++ b/vertica-elasticsearch-udx/build.gradle
@@ -1,15 +1,33 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
 
-repositories {
-    mavenCentral()
+version = '1.0'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+//Create jar file with dependencies
+task fatJar(type: Jar) {
+	manifest {
+		attributes 'Implementation-Title': 'vertica with elasticsearch UDSF',
+		'Implementation-Version': version
+		
+	}
+	baseName = project.name
+	from { configurations.runtime.collect { it.isDirectory() ? it: zipTree(it)}}
+	with jar
 }
+
+
+
 
 dependencies {
 
 	 compile group: 'org.elasticsearch.client', name: 'transport', version: '5.1.1'
+	 compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
+	 compile files('libs/VerticaSDK.jar')
 
      
      
      
 }
+
+
